--- a/en.lproj/MBMessageOutlineViewController.xib
+++ b/en.lproj/MBMessageOutlineViewController.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9532"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MBMessageOutlineViewController">
@@ -18,12 +17,12 @@
             <subviews>
                 <scrollView horizontalHuggingPriority="727" verticalHuggingPriority="749" horizontalCompressionResistancePriority="293" verticalCompressionResistancePriority="306" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQP-21-CuW">
                     <rect key="frame" x="0.0" y="0.0" width="450" height="169"/>
-                    <clipView key="contentView" horizontalHuggingPriority="712" verticalHuggingPriority="738" horizontalCompressionResistancePriority="746" verticalCompressionResistancePriority="308" misplaced="YES" id="8F8-Yt-CPh">
-                        <rect key="frame" x="1" y="17" width="448" height="151"/>
+                    <clipView key="contentView" horizontalHuggingPriority="712" verticalHuggingPriority="738" horizontalCompressionResistancePriority="746" verticalCompressionResistancePriority="308" id="8F8-Yt-CPh">
+                        <rect key="frame" x="1" y="0.0" width="448" height="168"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <outlineView horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="363" verticalCompressionResistancePriority="376" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" headerView="eS5-sW-ewi" indentationPerLevel="16" autoresizesOutlineColumn="YES" outlineTableColumn="2fv-A6-H6z" id="M46-cS-F51">
-                                <rect key="frame" x="0.0" y="0.0" width="370" height="19"/>
+                                <rect key="frame" x="0.0" y="0.0" width="448" height="145"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" red="0.40000000596046448" green="0.80000001192092896" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -110,7 +109,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <tableHeaderView key="headerView" horizontalHuggingPriority="720" verticalHuggingPriority="734" horizontalCompressionResistancePriority="230" verticalCompressionResistancePriority="204" id="eS5-sW-ewi">
-                        <rect key="frame" x="0.0" y="0.0" width="448" height="17"/>
+                        <rect key="frame" x="0.0" y="0.0" width="448" height="23"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </tableHeaderView>
                 </scrollView>
